syntax = "proto3";

package post;

option go_package = "./postpb";

// Post message represents a blog post
message Post {
  string post_id = 1;
  string title = 2;
  string description = 3;
  string created_by = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// CreatePostRequest for creating a new post
message CreatePostRequest {
  Post post = 1;
}

// CreatePostResponse returns the status of the post creation
message CreatePostResponse {
  string post_id = 1;
}

// ReadPostRequest to fetch a post
message ReadPostRequest {
  string post_id = 1;
}

// ReadPostResponse returns the requested post
message ReadPostResponse {
  Post post = 1;
}

// UpdatePostRequest to update an existing post
message UpdatePostRequest {
  Post post = 1;
}

// UpdatePostResponse returns the status of the post update
message UpdatePostResponse {
  bool success = 1;
}

// DeletePostRequest to remove a post
message DeletePostRequest {
  string post_id = 1;
}

// DeletePostResponse returns the status of the post deletion
message DeletePostResponse {
  bool success = 1;
}

// PostService defines the gRPC service for posts
service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}
